# ChangeLog for dev-ruby/ruby-glib2
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-glib2/ChangeLog,v 1.21 2005/05/21 23:58:27 weeve Exp $

  21 May 2005; Jason Wever <weeve@gentoo.org> ruby-glib2-0.10.1.ebuild:
  Stable on SPARC.

  24 Apr 2005; Simon Stelling <blubb@gentoo.org> ruby-glib2-0.10.1.ebuild:
  stable on amd64

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org> ruby-glib2-0.10.1.ebuild:
  stable on ia64

*ruby-glib2-0.12.0 (13 Mar 2005)

  13 Mar 2005; Michael Kohl <citizen428@gentoo.org>
  +ruby-glib2-0.12.0.ebuild:
  Version bump.

  25 Nov 2004; Mamoru KOMACHI <usata@gentoo.org> ruby-glib2-0.11.0.ebuild:
  Added src_test().

*ruby-glib2-0.11.0 (25 Nov 2004)

  25 Nov 2004; Mamoru KOMACHI <usata@gentoo.org> +ruby-glib2-0.11.0.ebuild:
  Version bumped.

  05 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> -ruby-glib2-0.10.0.ebuild,
  ruby-glib2-0.10.1.ebuild:
  Stable on x86, alpha and ppc.

*ruby-glib2-0.10.1 (19 Aug 2004)

  19 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> +ruby-glib2-0.10.1.ebuild:
  Version bumped.

*ruby-glib2-0.10.0 (09 Aug 2004)

  09 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> +ruby-glib2-0.10.0.ebuild:
  Version bumped.

  03 Jul 2004; Tom Martin <slarti@gentoo.org> ruby-glib2-0.9.1.ebuild:
  Marked ~amd64.

  30 Jun 2004; Ferris McCormick <fmccor@gentoo.org> ruby-glib2-0.9.1.ebuild:
  Add ~sparc keyword.

  30 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> -ruby-glib2-0.7.0.ebuild,
  -ruby-glib2-0.8.0.ebuild, ruby-glib2-0.8.1.ebuild, ruby-glib2-0.9.1.ebuild:
  Stable on alpha and ppc

  24 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> ruby-glib2-0.8.1.ebuild,
  ruby-glib2-0.9.1.ebuild:
  Stable on x86

  12 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> ruby-glib2-0.5.0.ebuild,
  ruby-glib2-0.9.1.ebuild:
  Removed 0.5.0 and added ruby.eclass support to 0.9.1

*ruby-glib2-0.9.1 (18 Mar 2004)

  18 Mar 2004; Aron Griffis <agriffis@gentoo.org> ruby-glib2-0.8.0.ebuild,