@@ -1,11 +1,11 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-glib2/ruby-glib2-0.12.0.ebuild,v 1.1 2005/03/13 22:58:05 citizen428 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-glib2/ruby-glib2-0.12.0.ebuild,v 1.2 2005/06/26 15:15:53 usata Exp $
 
 inherit ruby ruby-gnome2 eutils
 
 DESCRIPTION="Ruby Glib2 bindings"
-KEYWORDS="~alpha ~x86 ~ppc ~ia64 ~sparc ~amd64"
+KEYWORDS="~alpha x86 ~ppc ~ia64 ~sparc ~amd64"
 IUSE=""
 USE_RUBY="ruby16 ruby18 ruby19"
 DEPEND=">=dev-libs/glib-2"
